try enabling dashboard.enable

--- a/traefik/values/homelab.yaml
+++ b/traefik/values/homelab.yaml
@@ -6,9 +6,8 @@ additionalArguments:
   - "--serversTransport.insecureSkipVerify=true"
   - "--log.level=INFO"
 
-api:
-  dashboard: true
-  insecure: false
+dashboard:
+  enabled: true
 
 deployment:
   enabled: true
