--- a/traefik/values/homelab.yaml
+++ b/traefik/values/homelab.yaml
@@ -1,6 +1,3 @@
-api:
-  insecure: true
-
 globalArguments:
   - "--global.sendanonymoususage=false"
   - "--global.checknewversion=false"
@@ -8,9 +5,6 @@ globalArguments:
 additionalArguments:
   - "--serversTransport.insecureSkipVerify=true"
   - "--log.level=INFO"
-
-dashboard:
-  enabled: true
 
 deployment:
   enabled: true
@@ -23,7 +17,7 @@ deployment:
 ports:
   web:
     redirections:
-      port: websecure
+      entryPoint: {}
   websecure:
     tls:
       enabled: true
